--- a/index.html
+++ b/index.html
@@ -68,15 +68,12 @@
 <body>
     <div class="container">
 
-        <div class="row profile-container">
-            <div class="col-md-6">
+        <div class="profile-container">
+            <div>
                 <h1>Yash Vadoliya</h1>
                 <h6>Web Developer</h6>
                 <h6>Mobile: <a href="tel:+918758787706">+91 8758787706</a></h6>
                 <h6>Email: <a href="mailto:vadoliyayash1409@gmail.com">vadoliyayash1409@gmail.com</a></h6>
-            </div>
-            <div class="col-md-6 text-md-end profile-img mt-4">
-                <img src="C:\Users\nikunj sachani\OneDrive\Pictures\Yash\Yash.jpg" alt="Yash" style="height: 150px;">
             </div>
         </div>
 
